# Autonomous-Chassis

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: colcon-build.yml
autonomous_chassis/autonomous_chassis_description/: CMakeLists.txt  package.xml
autonomous_chassis/autonomous_chassis_description/launch/: display.launch.py
autonomous_chassis/autonomous_chassis_description/urdf/: chassis.urdf
autonomous_chassis/autonomous_chassis_gazebo/: CMakeLists.txt  package.xml
autonomous_chassis/autonomous_chassis_gazebo/launch/: simulation.launch.py
autonomous_chassis/autonomous_chassis_gazebo/worlds/: obstacle_track.world
autonomous_chassis_description/: CMakeLists.txt  package.xml
autonomous_chassis_description/launch/: display.launch.py
autonomous_chassis_description/meshes/: fl_knuckle.stl  fr_knuckle.stl
autonomous_chassis_description/urdf/: chassis.urdf.xacro
