<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_chassis_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo worlds and launch configurations for the autonomous chassis</description>
  <maintainer email="user@todo.todo">Sivakumar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>autonomous_chassis_description</depend>
  <depend>ros_gz_sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
